# butler

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  mcp.rs  test.rs
src/components/: AIChat.tsx  Editor.tsx  LogsPanel.tsx  MCPDebugPanel.tsx  MCPPanel.tsx  MenuBar.tsx  RightPanel.tsx  Settings.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  ToolPalette.tsx  WelcomePage.tsx
src/components/auth/: AccessKeyForm.tsx  AuthForm.tsx
src/components/ui/: Notifications.tsx
src/hooks/: useAI.ts  useAuth.ts  useFileManager.ts  useMCP.ts
src/services/: claudeService.ts  mcpService.ts  tauriMCPService.ts
